--- a/src/Components/CSS/Login.css
+++ b/src/Components/CSS/Login.css
@@ -8,7 +8,7 @@
     display:flex;
     flex-direction: column;
     justify-content: space-around;
-    height:50%;
+    height:70%;
 }
 .login-active{
     background-color: green;
@@ -17,9 +17,7 @@
     background-color: gray;
 }
 .username-active,.password-active{
-    -webkit-box-shadow: 0px 0px 14px -1px rgba(7,143,0,1);
-    -moz-box-shadow: 0px 0px 14px -1px rgba(7,143,0,1);
-    box-shadow: 0px 0px 14px -1px rgba(7,143,0,1);
+    border:1px solid green
 }
 .username-inactive,.password-inactive{
     -webkit-box-shadow: 0px 0px 9px -1px rgba(55,56,55,1);
@@ -32,13 +30,13 @@
     border:none;
 }
 .username-box,.password-box{
-    border:1px solid gray;
     height: 3em;
     border-radius: 10px;
     display: flex;
     align-items: center;
 }
 .login-button{
+    margin-top: 3em;
     color:white;
     height:3rem;
     border-radius: 10px;
