--- a/src/Components/CSS/SpreadSheet.css
+++ b/src/Components/CSS/SpreadSheet.css
@@ -1,3 +1,5 @@
+
+
 .cell{
     border: none;
     outline: none;
@@ -6,6 +8,7 @@
     position:absolute;
     border: 1px solid red; 
     background-color: white;
+    width:10em;
 }
 #heading{
     float:left;
