--- a/src/Components/CSS/Login.css
+++ b/src/Components/CSS/Login.css
@@ -1,67 +1,70 @@
+@font-face {
+    font-family: myFirstFont;
+    src: url(/assets/Poppins-Regular.ttf);
+  }
+
 .login-page{
     display:flex;
     justify-content: center;
     align-items: center;
     height:100vh;
+    background-color: #ebeeef;
 }
-.login-box{
-    display:flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height:70%;
+.header-login {
+    position: relative;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    
 }
-.login-active{
-    background-color: green;
-}
-.login-inactive{
-    background-color: gray;
-}
-.signup-page{
-    display:flex;
-    justify-content: center;
+.heading-tag{
+    position: absolute;
+    width:100%;
+    height:100%;
+    background-color: rgba(54,84,99,0.7);
+    display: flex;
     align-items: center;
-    height:100vh;
+    justify-content: center;
+    color:white;
+    font-weight: bold;
+    font-size:1.7em;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
 }
-.signup-box{
-    display:flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height:70%;
+.header-login img{
+    width:100%;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    
 }
-.signup-active{
-    background-color: green;
+
+.footer-login{
+    background-color: white;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    padding:2em;
+    font-family:myFirstFont;
+    color:#808080;
 }
-.signup-inactive{
-    background-color: gray;
+
+.username-box,.password-box{
+    display: flex;
 }
-.username-active,.password-active{
-    border:1px solid green
+
+.username-box input, .password-box input{
+    outline: none;
+}
+
+.username-box label,.password-box label{
+    margin:0px;    
+}
+.sign-up{
+    float:right;
 }
 .username-inactive,.password-inactive{
-    -webkit-box-shadow: 0px 0px 9px -1px rgba(55,56,55,1);
-    -moz-box-shadow: 0px 0px 9px -1px rgba(55,56,55,1);
-    box-shadow: 0px 0px 9px -1px rgba(55,56,55,1);
-
-}
-#username,#password{
-    outline: none;
     border:none;
+    border-bottom: 1px solid #808080;
 }
-.username-box,.password-box{
-    height: 3em;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-}
-.login-button{
-    margin-top: 3em;
-    color:white;
-    height:3rem;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size:1.1em;
-    cursor: pointer;
-
+.username-active,.password-active{
+    border:none;
+    border-bottom: 1px solid green;
 }
