--- a/src/Components/CSS/Login.css
+++ b/src/Components/CSS/Login.css
@@ -9,6 +9,20 @@
     align-items: center;
     height:100vh;
     background-color: #ebeeef;
+    position:'relative';
+    
+}
+.login-loader{
+    position: absolute;
+    width: 100%;
+    height:100%;
+    background-color: rgba(54,84,99,0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.loader-hide{
+    display: none;
 }
 .header-login {
     position: relative;
@@ -45,9 +59,17 @@
     font-family:myFirstFont;
     color:#808080;
 }
-
+.error-message{
+    color:red;
+    font-size: 10px;
+    text-align: center;
+}
+.error-message-hide{
+    visibility: hidden;
+}
 .username-box,.password-box{
     display: flex;
+    margin:2em;
 }
 
 .username-box input, .password-box input{
@@ -59,6 +81,12 @@
 }
 .sign-up{
     float:right;
+    margin-right:4em;
+    font-size: 10px;
+    
+}
+.sign-up a{
+    color:#57b846;
 }
 .username-inactive,.password-inactive{
     border:none;
@@ -67,4 +95,23 @@
 .username-active,.password-active{
     border:none;
     border-bottom: 1px solid green;
+}
+.login-button{
+    margin: auto;
+    width:10em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:4em;
+    color: white;
+    height: 2em;
+    border-radius: 1em;
+    cursor: pointer;
+
+}
+.login-inactive{
+    background-color: #333333;
+}
+.login-active{
+    background-color: #57b846;
 }
