--- a/src/Components/CSS/Dashboard.css
+++ b/src/Components/CSS/Dashboard.css
@@ -4,10 +4,48 @@
     padding:1em;
 }
 .dashboard{
+    background-color: #ebeeef;
+}
+.main-section{
     width:80%;
     margin:auto;
+    padding:3em;
 }
 .header{
-    height:10em;
-
+    border-bottom: 1px solid lightgray;
+    position:relative;
+    -webkit-box-shadow: 0px 2px 10px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 2px 10px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 10px -1px rgba(0,0,0,0.75);
+    
+}
+.header img{
+    height:22em;
+    opacity: 0.9;
+}
+.logout{
+    position: absolute;
+    right:1em;
+    top:1em;
+    border:1px solid #57b846;
+    border-radius:2em;
+    width:4.2em;
+    color:white;
+    background-color: #57b846;
+    outline: none;
+    user-select: none;
+}
+.logout:hover{
+    background-color: gray;
+    border:1px solid gray;
+}
+.card{
+    cursor: pointer;
+    border-color:#57b846;
+    background-color: #ebeeef;
+}
+.card-body {
+    padding: 0px;
+    margin-top:10px;
+    color:black;
 }
